-
Bug
-
Resolution: Fixed
-
P2: Important
-
5.15.1, 6.8.0 FF
-
Ubuntu Linux
-
-
b74e82190 (dev)
If the TextInput QML item has property echoMode set as TextInput.password, the Gnome virtual keyboard does not open when the TextInput gets input focus. For example if the echoMode is set as TextInput.PasswordEchoOnEdit, the Gnome VKB opens up normally.
Steps to reproduce the issue.
- Enable the Gnome virtual keyboard (for example in Ubuntu settings).
- Run the attached example.
- Click the TextInput
Expected result:
- The Gnome virtual keyboard opens up.
Actual result:
- The Gnome virtual keyboard does not open.
- duplicates
-
QTBUG-100223 Touchscreen: Discrepancy between QML TextInput and QLineEdit behaviour with Windows virtual keyboard
-
- Closed
-
- relates to
-
QTBUG-132154 The virtual keyboard pops up and then automatically retracts.
-
- Reported
-
-
QTBUG-135395 Yocto: Virtual Keyboard does not appear when clicking on a LineEdit.
-
- Reported
-